--- a/rummy-ledger/package.json
+++ b/rummy-ledger/package.json
@@ -4,16 +4,32 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "start:production": "expo start --no-dev --minify",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "build:development": "eas build --profile development",
+    "build:preview": "eas build --profile preview",
+    "build:production": "eas build --profile production",
+    "build:local": "expo export",
+    "submit:ios": "eas submit --platform ios",
+    "submit:android": "eas submit --platform android",
     "lint": "expo lint",
+    "lint:fix": "expo lint --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:ci": "node __tests__/ci/test-runner.js",
+    "test:comprehensive": "node scripts/run-comprehensive-tests.js",
+    "test:e2e": "jest --testPathPattern=\"__tests__/e2e\"",
+    "test:performance": "jest --testPathPattern=\"__tests__/(animations|performance)\"",
+    "test:accessibility": "jest --testPathPattern=\"__tests__/accessibility\"",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md}\""
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "analyze:bundle": "expo export --dump-assetmap",
+    "doctor": "expo doctor",
+    "prebuild": "expo prebuild --clean"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -55,6 +71,7 @@
     "eslint-config-expo": "~9.2.0",
     "jest": "^29.7.0",
     "jest-expo": "^53.0.9",
+    "jest-junit": "^16.0.0",
     "prettier": "^3.6.2",
     "typescript": "~5.8.3"
   },
@@ -76,10 +93,10 @@
     ],
     "coverageThreshold": {
       "global": {
-        "branches": 80,
-        "functions": 80,
-        "lines": 80,
-        "statements": 80
+        "branches": 90,
+        "functions": 90,
+        "lines": 90,
+        "statements": 90
       }
     },
     "transformIgnorePatterns": [
