--- a/rummy-ledger/package.json
+++ b/rummy-ledger/package.json
@@ -29,7 +29,8 @@
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "analyze:bundle": "expo export --dump-assetmap",
     "doctor": "expo doctor",
-    "prebuild": "expo prebuild --clean"
+    "prebuild": "expo prebuild --clean",
+    "test:integration": "node scripts/integration-test.js"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
